tests/pld-test-output/tests-Init-01_fail_semantic2/gcc-compile.txt
input.c: In function ‘main’:
input.c:4:7: error: ‘b’ undeclared (first use in this function)
   a = b;
       ^
input.c:4:7: note: each undeclared identifier is reported only once for each function it appears in
input.c:5:7: error: redeclaration of ‘a’ with no linkage
   int a = 5;
       ^
input.c:3:6: note: previous declaration of ‘a’ was here
  int a;
      ^

return code: 1
